Custom Extrude geometry node setup crashes when adding 'weld' after #94453

Closed
opened 2021-12-28 23:39:40 +01:00 by Jacob Merrill · 11 comments

PC - Win10 - 64 bit - Nvidia RTX 3060

extrude.blend

when adding weld to this after the geonodes stack we get a crash

steps to reproduce.

  1. open file
  2. add weld modifier to object in scene using extrude geonodes.
PC - Win10 - 64 bit - Nvidia RTX 3060 [extrude.blend](https://archive.blender.org/developer/F12779884/extrude.blend) when adding weld to this after the geonodes stack we get a crash steps to reproduce. 1. open file 2. add weld modifier to object in scene using extrude geonodes.
Author

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1
Author

2021-12-28 15-13-31.mp4
in daily build - blender-3.1.0-alpha+master.20b438d523c9-windows.amd64-release

[2021-12-28 15-13-31.mp4](https://archive.blender.org/developer/F12779920/2021-12-28_15-13-31.mp4) in daily build - blender-3.1.0-alpha+master.20b438d523c9-windows.amd64-release

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Looks like a somewhat recent issue as a build from the 17th seems to be fine.

ctx_loops_len and ctx_loops_ofs are both negative numbers inside the below stack

blender.exe!weld_poly_loop_ctx_setup(blender::Span<MLoop> mloop, const int mvert_len, blender::Span<int> vert_dest_map, const int remain_edge_ctx_len, blender::MutableSpan<WeldGroup> r_vlinks, WeldMesh * r_weld_mesh) Line 1053	C++
blender.exe!weld_mesh_context_create(const Mesh * mesh, blender::MutableSpan<int> vert_dest_map, const int vert_kill_len, WeldMesh * r_weld_mesh) Line 1275	C++
blender.exe!weldModifier_doWeld(WeldModifierData * wmd, const ModifierEvalContext * UNUSED_ctx, Mesh * mesh) Line 1685	C++
blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 1883	C++
blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 999	C
blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, GeometrySet & geometry_set) Line 875	C++
blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, GeometrySet * * r_geometry_set) Line 1224	C++
blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1866	C++
blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1996	C++
Looks like a somewhat recent issue as a build from the 17th seems to be fine. `ctx_loops_len` and `ctx_loops_ofs` are both negative numbers inside the below stack ``` blender.exe!weld_poly_loop_ctx_setup(blender::Span<MLoop> mloop, const int mvert_len, blender::Span<int> vert_dest_map, const int remain_edge_ctx_len, blender::MutableSpan<WeldGroup> r_vlinks, WeldMesh * r_weld_mesh) Line 1053 C++ blender.exe!weld_mesh_context_create(const Mesh * mesh, blender::MutableSpan<int> vert_dest_map, const int vert_kill_len, WeldMesh * r_weld_mesh) Line 1275 C++ blender.exe!weldModifier_doWeld(WeldModifierData * wmd, const ModifierEvalContext * UNUSED_ctx, Mesh * mesh) Line 1685 C++ blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 1883 C++ blender.exe!BKE_modifier_modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * me) Line 999 C blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, GeometrySet & geometry_set) Line 875 C++ blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, GeometrySet * * r_geometry_set) Line 1224 C++ blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1866 C++ blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1996 C++ ```
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

That was probably one of my cleanups then, I'll find out which one.

That was probably one of my cleanups then, I'll find out which one.
Member

Caused by {7acd3ad7d8e58b913c563edad2fb2abfee5a3b6b}

Caused by {7acd3ad7d8e58b913c563edad2fb2abfee5a3b6b}

This issue was referenced by dc0bf9b702

This issue was referenced by dc0bf9b7027783c3a760cc08286213c59db936f0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-12-29 07:17:12 +01:00
Author

Thank you!!

Happy New Year!

Thank you!! Happy New Year!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94453
No description provided.