Fix T94453: Weld modifier crash after recent cleanup

I had assumed that the span's size was the same as the length variable.
In the future, separate lengths could be removed in favor of using
lengths directly from spans.